@@ -12,7 +12,6 @@ import org.apache.logging.log4j.Logger;
 
 import java.io.*;
 import java.net.*;
-import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.Executors;
@@ -20,34 +19,55 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 public class HttpUtil {
     public static final ListeningExecutorService field_180193_a = MoreExecutors.listeningDecorator(Executors.newCachedThreadPool((new ThreadFactoryBuilder()).setDaemon(true).setNameFormat("Downloader %d").build()));
+
+    /**
+     * The number of download threads that we have started so far.
+     */
     private static final AtomicInteger downloadThreadsStarted = new AtomicInteger(0);
-    private static final Logger logger = LogManager.getLogger("MinecraftLogger");
+    private static final Logger logger = LogManager.getLogger();
 
-    public static String buildPostString(Map<String, Object> data) {
-        StringBuilder stringbuilder = new StringBuilder();
+    /**
+     * Builds an encoded HTTP POST content string from a string map
+     */
+    public static String buildPostString(final Map<String, Object> data) {
+        final StringBuilder stringbuilder = new StringBuilder();
 
-        for (Entry<String, Object> entry : data.entrySet()) {
-            if (!stringbuilder.isEmpty()) {
+        for (final Entry<String, Object> entry : data.entrySet()) {
+            if (stringbuilder.length() > 0) {
                 stringbuilder.append('&');
             }
 
-            stringbuilder.append(URLEncoder.encode((String) entry.getKey(), StandardCharsets.UTF_8));
+            try {
+                stringbuilder.append(URLEncoder.encode(entry.getKey(), "UTF-8"));
+            } catch (final UnsupportedEncodingException unsupportedencodingexception1) {
+                unsupportedencodingexception1.printStackTrace();
+            }
 
             if (entry.getValue() != null) {
                 stringbuilder.append('=');
 
-                stringbuilder.append(URLEncoder.encode(entry.getValue().toString(), StandardCharsets.UTF_8));
+                try {
+                    stringbuilder.append(URLEncoder.encode(entry.getValue().toString(), "UTF-8"));
+                } catch (final UnsupportedEncodingException unsupportedencodingexception) {
+                    unsupportedencodingexception.printStackTrace();
+                }
             }
         }
 
         return stringbuilder.toString();
     }
 
-    public static String postMap(URL url, Map<String, Object> data, boolean skipLoggingErrors) {
+    /**
+     * Sends a POST to the given URL using the map as the POST args
+     */
+    public static String postMap(final URL url, final Map<String, Object> data, final boolean skipLoggingErrors) {
         return post(url, buildPostString(data), skipLoggingErrors);
     }
 
-    private static String post(URL url, String content, boolean skipLoggingErrors) {
+    /**
+     * Sends a POST to the given URL
+     */
+    private static String post(final URL url, final String content, final boolean skipLoggingErrors) {
         try {
             Proxy proxy = MinecraftServer.getServer() == null ? null : MinecraftServer.getServer().getServerProxy();
 
@@ -55,7 +75,7 @@ public class HttpUtil {
                 proxy = Proxy.NO_PROXY;
             }
 
-            HttpURLConnection httpurlconnection = (HttpURLConnection) url.openConnection(proxy);
+            final HttpURLConnection httpurlconnection = (HttpURLConnection) url.openConnection(proxy);
             httpurlconnection.setRequestMethod("POST");
             httpurlconnection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
             httpurlconnection.setRequestProperty("Content-Length", "" + content.getBytes().length);
@@ -63,12 +83,12 @@ public class HttpUtil {
             httpurlconnection.setUseCaches(false);
             httpurlconnection.setDoInput(true);
             httpurlconnection.setDoOutput(true);
-            DataOutputStream dataoutputstream = new DataOutputStream(httpurlconnection.getOutputStream());
+            final DataOutputStream dataoutputstream = new DataOutputStream(httpurlconnection.getOutputStream());
             dataoutputstream.writeBytes(content);
             dataoutputstream.flush();
             dataoutputstream.close();
-            BufferedReader bufferedreader = new BufferedReader(new InputStreamReader(httpurlconnection.getInputStream()));
-            StringBuffer stringbuffer = new StringBuffer();
+            final BufferedReader bufferedreader = new BufferedReader(new InputStreamReader(httpurlconnection.getInputStream()));
+            final StringBuffer stringbuffer = new StringBuffer();
             String s;
 
             while ((s = bufferedreader.readLine()) != null) {
@@ -78,7 +98,7 @@ public class HttpUtil {
 
             bufferedreader.close();
             return stringbuffer.toString();
-        } catch (Exception exception) {
+        } catch (final Exception exception) {
             if (!skipLoggingErrors) {
                 logger.error("Could not post to " + url, exception);
             }
@@ -88,120 +108,124 @@ public class HttpUtil {
     }
 
     public static ListenableFuture<Object> downloadResourcePack(final File saveFile, final String packUrl, final Map<String, String> p_180192_2_, final int maxSize, final IProgressUpdate p_180192_4_, final Proxy p_180192_5_) {
-        ListenableFuture<?> listenablefuture = field_180193_a.submit(() -> {
-            HttpURLConnection httpurlconnection = null;
-            InputStream inputstream = null;
-            OutputStream outputstream = null;
+        final ListenableFuture<?> listenablefuture = field_180193_a.submit(new Runnable() {
+            public void run() {
+                HttpURLConnection httpurlconnection = null;
+                InputStream inputstream = null;
+                OutputStream outputstream = null;
 
-            if (p_180192_4_ != null) {
-                p_180192_4_.resetProgressAndMessage("Downloading Resource Pack");
-                p_180192_4_.displayLoadingString("Making Request...");
-            }
+                if (p_180192_4_ != null) {
+                    p_180192_4_.resetProgressAndMessage("Downloading Resource Pack");
+                    p_180192_4_.displayLoadingString("Making Request...");
+                }
 
-            try {
                 try {
-                    byte[] abyte = new byte[4096];
-                    URL url = new URL(packUrl);
-                    httpurlconnection = (HttpURLConnection) url.openConnection(p_180192_5_);
-                    float f = 0.0F;
-                    float f1 = (float) p_180192_2_.entrySet().size();
+                    try {
+                        final byte[] abyte = new byte[4096];
+                        final URL url = new URL(packUrl);
+                        httpurlconnection = (HttpURLConnection) url.openConnection(p_180192_5_);
+                        float f = 0.0F;
+                        float f1 = (float) p_180192_2_.entrySet().size();
 
-                    for (Entry<String, String> entry : p_180192_2_.entrySet()) {
-                        httpurlconnection.setRequestProperty(entry.getKey(), entry.getValue());
+                        for (final Entry<String, String> entry : p_180192_2_.entrySet()) {
+                            httpurlconnection.setRequestProperty(entry.getKey(), entry.getValue());
+
+                            if (p_180192_4_ != null) {
+                                p_180192_4_.setLoadingProgress((int) (++f / f1 * 100.0F));
+                            }
+                        }
+
+                        inputstream = httpurlconnection.getInputStream();
+                        f1 = (float) httpurlconnection.getContentLength();
+                        final int i = httpurlconnection.getContentLength();
 
                         if (p_180192_4_ != null) {
-                            p_180192_4_.setLoadingProgress((int) (++f / f1 * 100.0F));
+                            p_180192_4_.displayLoadingString(String.format("Downloading file (%.2f MB)...", Float.valueOf(f1 / 1000.0F / 1000.0F)));
                         }
-                    }
 
-                    inputstream = httpurlconnection.getInputStream();
-                    f1 = (float) httpurlconnection.getContentLength();
-                    int i = httpurlconnection.getContentLength();
+                        if (saveFile.exists()) {
+                            final long j = saveFile.length();
 
-                    if (p_180192_4_ != null) {
-                        p_180192_4_.displayLoadingString(String.format("Downloading file (%.2f MB)...", f1 / 1000.0F / 1000.0F));
-                    }
+                            if (j == (long) i) {
+                                if (p_180192_4_ != null) {
+                                    p_180192_4_.setDoneWorking();
+                                }
 
-                    if (saveFile.exists()) {
-                        long j = saveFile.length();
+                                return;
+                            }
 
-                        if (j == (long) i) {
+                            HttpUtil.logger.warn("Deleting " + saveFile + " as it does not match what we currently have (" + i + " vs our " + j + ").");
+                            FileUtils.deleteQuietly(saveFile);
+                        } else if (saveFile.getParentFile() != null) {
+                            saveFile.getParentFile().mkdirs();
+                        }
+
+                        outputstream = new DataOutputStream(new FileOutputStream(saveFile));
+
+                        if (maxSize > 0 && f1 > (float) maxSize) {
                             if (p_180192_4_ != null) {
                                 p_180192_4_.setDoneWorking();
                             }
 
-                            return;
+                            throw new IOException("Filesize is bigger than maximum allowed (file is " + f + ", limit is " + maxSize + ")");
                         }
 
-                        HttpUtil.logger.warn("Deleting " + saveFile + " as it does not match what we currently have (" + i + " vs our " + j + ").");
-                        FileUtils.deleteQuietly(saveFile);
-                    } else if (saveFile.getParentFile() != null) {
-                        saveFile.getParentFile().mkdirs();
-                    }
+                        int k = 0;
 
-                    outputstream = new DataOutputStream(new FileOutputStream(saveFile));
+                        while ((k = inputstream.read(abyte)) >= 0) {
+                            f += (float) k;
 
-                    if (maxSize > 0 && f1 > (float) maxSize) {
+                            if (p_180192_4_ != null) {
+                                p_180192_4_.setLoadingProgress((int) (f / f1 * 100.0F));
+                            }
+
+                            if (maxSize > 0 && f > (float) maxSize) {
+                                if (p_180192_4_ != null) {
+                                    p_180192_4_.setDoneWorking();
+                                }
+
+                                throw new IOException("Filesize was bigger than maximum allowed (got >= " + f + ", limit was " + maxSize + ")");
+                            }
+
+                            if (Thread.interrupted()) {
+                                HttpUtil.logger.error("INTERRUPTED");
+
+                                if (p_180192_4_ != null) {
+                                    p_180192_4_.setDoneWorking();
+                                }
+
+                                return;
+                            }
+
+                            outputstream.write(abyte, 0, k);
+                        }
+
                         if (p_180192_4_ != null) {
                             p_180192_4_.setDoneWorking();
-                        }
-
-                        throw new IOException("Filesize is bigger than maximum allowed (file is " + f + ", limit is " + maxSize + ")");
-                    }
-
-                    int k = 0;
-
-                    while ((k = inputstream.read(abyte)) >= 0) {
-                        f += (float) k;
-
-                        if (p_180192_4_ != null) {
-                            p_180192_4_.setLoadingProgress((int) (f / f1 * 100.0F));
-                        }
-
-                        if (maxSize > 0 && f > (float) maxSize) {
-                            if (p_180192_4_ != null) {
-                                p_180192_4_.setDoneWorking();
-                            }
-
-                            throw new IOException("Filesize was bigger than maximum allowed (got >= " + f + ", limit was " + maxSize + ")");
-                        }
-
-                        if (Thread.interrupted()) {
-                            HttpUtil.logger.error("INTERRUPTED");
-
-                            if (p_180192_4_ != null) {
-                                p_180192_4_.setDoneWorking();
-                            }
-
                             return;
                         }
+                    } catch (final Throwable throwable) {
+                        throwable.printStackTrace();
 
-                        outputstream.write(abyte, 0, k);
-                    }
+                        if (httpurlconnection != null) {
+                            final InputStream inputstream1 = httpurlconnection.getErrorStream();
 
-                    if (p_180192_4_ != null) {
-                        p_180192_4_.setDoneWorking();
-                    }
-                } catch (Throwable throwable) {
-                    throwable.printStackTrace();
+                            try {
+                                HttpUtil.logger.error(IOUtils.toString(inputstream1));
+                            } catch (final IOException ioexception) {
+                                ioexception.printStackTrace();
+                            }
+                        }
 
-                    if (httpurlconnection != null) {
-                        InputStream inputstream1 = httpurlconnection.getErrorStream();
-
-                        try {
-                            HttpUtil.logger.error(IOUtils.toString(inputstream1));
-                        } catch (IOException ioexception) {
-                            ioexception.printStackTrace();
+                        if (p_180192_4_ != null) {
+                            p_180192_4_.setDoneWorking();
+                            return;
                         }
                     }
-
-                    if (p_180192_4_ != null) {
-                        p_180192_4_.setDoneWorking();
-                    }
+                } finally {
+                    IOUtils.closeQuietly(inputstream);
+                    IOUtils.closeQuietly(outputstream);
                 }
-            } finally {
-                IOUtils.closeQuietly(inputstream);
-                IOUtils.closeQuietly(outputstream);
             }
         });
         return (ListenableFuture<Object>) listenablefuture;
@@ -219,18 +243,21 @@ public class HttpUtil {
                 if (serversocket != null) {
                     serversocket.close();
                 }
-            } catch (IOException ignored) {
+            } catch (final IOException var8) {
             }
         }
 
         return i;
     }
 
-    public static String get(URL url) throws IOException {
-        HttpURLConnection httpurlconnection = (HttpURLConnection) url.openConnection();
+    /**
+     * Send a GET request to the given URL.
+     */
+    public static String get(final URL url) throws IOException {
+        final HttpURLConnection httpurlconnection = (HttpURLConnection) url.openConnection();
         httpurlconnection.setRequestMethod("GET");
-        BufferedReader bufferedreader = new BufferedReader(new InputStreamReader(httpurlconnection.getInputStream()));
-        StringBuilder stringbuilder = new StringBuilder();
+        final BufferedReader bufferedreader = new BufferedReader(new InputStreamReader(httpurlconnection.getInputStream()));
+        final StringBuilder stringbuilder = new StringBuilder();
         String s;
 
         while ((s = bufferedreader.readLine()) != null) {
